Check to make sure that the form looks good on mobile and desktop. #1

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 main {
   margin: 0 5%;
+  margin-bottom: 2rem;
 }
 
 header {
